add feature landlord
Cập nhật khoảng 90% độ hoàn thiện mong muốn.